<resources>
    <string name="app_name">Calculator_Old</string>

    <string name="saved_text_view_text">Сохранённые</string>
    <string name="current_text_view_text">Текущее</string>
    <string name="save_btn_text">Сохранить</string>
    <string name="calc_btn_text">Калькулятор</string>
    <string name="saved_nums_delimiter">\n</string>

    <string name="zero_btn_text">0</string>
    <string name="one_btn_text">1</string>
    <string name="two_btn_text">2</string>
    <string name="three_btn_text">3</string>
    <string name="four_btn_text">4</string>
    <string name="five_btn_text">5</string>
    <string name="six_btn_text">6</string>
    <string name="seven_btn_text">7</string>
    <string name="eight_btn_text">8</string>
    <string name="nine_btn_text">9</string>

    <string name="plus_btn_text">+</string>
    <string name="minus_btn_text">-</string>
    <string name="mult_btn_text">*</string>
    <string name="div_btn_text">/</string>
    <string name="equals_btn_text">=</string>

    <string name="error_msg">ERROR</string>

    <string name="ok_btn_text">OK</string>
    <string name="clear_btn_text">C</string>
</resources>