<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/calc_main_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="end"
                android:textSize="@dimen/result_text_size" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ok_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/ok_btn_text"
                    android:textSize="@dimen/buttons_text_size" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clear_btn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/clear_btn_text"
                    android:textSize="@dimen/buttons_text_size" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/one_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/one_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/two_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/two_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/three_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/three_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/divide_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/div_btn_text"
                android:textSize="@dimen/buttons_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/four_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/four_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/five_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/five_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/six_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/six_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mult_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mult_btn_text"
                android:textSize="@dimen/buttons_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/seven_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seven_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/eight_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/eight_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nine_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nine_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minus_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus_btn_text"
                android:textSize="@dimen/buttons_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/zero_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/zero_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/equals_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equals_btn_text"
                android:textSize="@dimen/buttons_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plus_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus_btn_text"
                android:textSize="@dimen/buttons_text_size" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>