<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/main_padding_horizontal"
        android:paddingVertical="@dimen/main_padding_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/saved_text_view_text"
            android:textSize="@dimen/main_info_text_size" />

        <TextView
            android:id="@+id/saved_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/main_info_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current_text_view_text"
            android:textSize="@dimen/main_info_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/current_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/main_info_text_size" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_btn_text"
                android:textSize="@dimen/buttons_text_size" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/calc_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc_btn_text"
            android:textSize="@dimen/buttons_text_size" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
